[package]
name = "tetris-3d"
version = "0.1.0"
authors = ["kalintas <keremkalinntas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.49.1"
gl = "0.14.0"
nalgebra-glm = "0.17.0"
image = "0.24.5"
rand = "0.8.5"
